<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mcv_snippet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:checkable="true"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true"
    tools:cardBackgroundColor="@color/cardBgPink">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/tv_title_snippet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            tools:text="@string/about_me" />

        <TextView
            android:id="@+id/tv_body_snippet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_snippet"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="@color/colorTextBody"
            tools:text="@string/lorem" />

        <TextView
            android:id="@+id/tv_modified_date_snippet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_body_snippet"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorTextBody"
            tools:text="@string/_24_mar" />
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>