<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardBgOrange">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:elevation="0dp">

        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/mt_create"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/mt_create"
                android:gravity="end"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_save_create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@color/cardBgOrange" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_delete_create"
                    style="@style/App.Button.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_baseline_delete_outline_24"
                    app:iconTint="@android:color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_fav_create"
                    style="@style/App.Button.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    app:icon="@drawable/ic_baseline_favorite_border_24"
                    app:iconTint="@android:color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_more_create"
                    style="@style/App.Button.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_baseline_more_vert_24"
                    app:iconTint="@android:color/white" />
            </LinearLayout>
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:clipToPadding="false"
        android:paddingBottom="50dp"
        android:theme="@style/AppTheme.NestedScrollView"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:id="@+id/fl_note_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="true"
            android:paddingStart="25dp"
            android:paddingEnd="25dp" />
    </androidx.core.widget.NestedScrollView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp">

        <TextView
            android:id="@+id/_tv_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_modified"
            android:textColor="@color/colorTextBody" />

        <TextView
            android:id="@+id/tv_last_modified_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/_tv_last"
            android:textColor="@color/colorTextBody"
            tools:text="23 Aug" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/tv_created_create"
            android:layout_toEndOf="@id/tv_last_modified_create"
            android:gravity="end"
            android:text="@string/created"
            android:textColor="@color/colorTextBody" />

        <TextView
            android:id="@+id/tv_created_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorTextBody"
            tools:text="23 Aug" />
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>